// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils attach Puppeteer should pass for Chrome 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`utils attach Puppeteer should pass for Edge 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`utils attach Puppeteer should pass for Firefox (DevTools) 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`utils attach Puppeteer should pass for Firefox 1`] = `
Array [
  Array [
    Object {
      "browserURL": "http://localhost:4321",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`utils updateCapabilities setting devtools port in Firefox should not overwrite if already set 1`] = `
Object {
  "capabilities": Object {
    "browserName": "firefox",
    "moz:firefoxOptions": Object {
      "args": Array [
        "foo",
        "bar",
        "-remote-debugging-port",
        1234,
        "barfoo",
      ],
    },
  },
}
`;

exports[`utils updateCapabilities setting devtools port in Firefox should set firefox options if there aren't any 1`] = `
Object {
  "capabilities": Object {
    "browserName": "firefox",
    "moz:firefoxOptions": Object {
      "args": Array [
        "-remote-debugging-port",
        "9222",
      ],
    },
  },
}
`;

exports[`utils updateCapabilities setting devtools port in Firefox should set firefox options if there aren't any 2`] = `
Object {
  "capabilities": Object {
    "browserName": "firefox",
  },
}
`;

exports[`utils updateCapabilities should do nothing if no browser specified 1`] = `
Object {
  "capabilities": Object {},
}
`;
